--- a/MCMS/Base.lproj/Main.storyboard
+++ b/MCMS/Base.lproj/Main.storyboard
@@ -151,36 +151,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bby-dB-zpA">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="tlP-Mm-fqc"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="tlP-Mm-fqc"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="80" y="144" width="240" height="128"/>
+                                    <mask key="constraints">
+                                        <include reference="tlP-Mm-fqc"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E41-yA-6rg">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="80" y="365" width="240" height="128"/>
+                                </variation>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="It was super effective!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VAV-sB-rIM">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="116" y="88" width="168" height="21"/>
+                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="bby-dB-zpA" firstAttribute="leading" secondItem="E41-yA-6rg" secondAttribute="leading" id="6nW-Pi-7US"/>
+                            <constraint firstItem="B13-WH-eOp" firstAttribute="top" secondItem="E41-yA-6rg" secondAttribute="bottom" constant="107" id="Hmy-i0-zhA"/>
+                            <constraint firstItem="bby-dB-zpA" firstAttribute="leading" secondItem="2xK-90-vky" secondAttribute="leadingMargin" constant="60" id="Kdg-UE-IiZ"/>
                             <constraint firstItem="B13-WH-eOp" firstAttribute="top" secondItem="VAV-sB-rIM" secondAttribute="bottom" constant="482" id="Ohp-Tk-3x6"/>
+                            <constraint firstItem="E41-yA-6rg" firstAttribute="top" secondItem="bby-dB-zpA" secondAttribute="bottom" constant="93" id="XBq-iO-IU3"/>
+                            <constraint firstItem="bby-dB-zpA" firstAttribute="top" secondItem="VAV-sB-rIM" secondAttribute="bottom" constant="35" id="dp4-C8-PAa"/>
+                            <constraint firstItem="E41-yA-6rg" firstAttribute="trailing" secondItem="bby-dB-zpA" secondAttribute="trailing" id="heV-KR-9cn"/>
                             <constraint firstItem="VAV-sB-rIM" firstAttribute="top" secondItem="pyM-9Y-Au9" secondAttribute="bottom" constant="33" id="ly4-fK-ox9"/>
                             <constraint firstItem="VAV-sB-rIM" firstAttribute="leading" secondItem="2xK-90-vky" secondAttribute="leadingMargin" constant="33" id="qo0-uJ-FuP"/>
+                            <constraint firstItem="bby-dB-zpA" firstAttribute="centerX" secondItem="VAV-sB-rIM" secondAttribute="centerX" id="z6R-DG-byk"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
+                                <exclude reference="bby-dB-zpA"/>
+                                <exclude reference="E41-yA-6rg"/>
                                 <exclude reference="VAV-sB-rIM"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="ly4-fK-ox9"/>
                                 <exclude reference="qo0-uJ-FuP"/>
+                                <exclude reference="6nW-Pi-7US"/>
+                                <exclude reference="Kdg-UE-IiZ"/>
+                                <exclude reference="dp4-C8-PAa"/>
+                                <exclude reference="z6R-DG-byk"/>
+                                <exclude reference="XBq-iO-IU3"/>
+                                <exclude reference="heV-KR-9cn"/>
+                                <exclude reference="Hmy-i0-zhA"/>
                                 <exclude reference="Ohp-Tk-3x6"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
+                                <include reference="bby-dB-zpA"/>
+                                <include reference="E41-yA-6rg"/>
                                 <include reference="VAV-sB-rIM"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="ly4-fK-ox9"/>
                                 <include reference="qo0-uJ-FuP"/>
+                                <include reference="6nW-Pi-7US"/>
+                                <include reference="Kdg-UE-IiZ"/>
+                                <include reference="dp4-C8-PAa"/>
+                                <include reference="z6R-DG-byk"/>
+                                <include reference="XBq-iO-IU3"/>
+                                <include reference="heV-KR-9cn"/>
+                                <include reference="Hmy-i0-zhA"/>
                                 <include reference="Ohp-Tk-3x6"/>
                             </mask>
                         </variation>
